Changelog for statusmessages

   (name of developer listed in brackets)

statusmessages 1.0 - Released January 26, 2006

    - Initial implementation
      [hannosch]
