@@ -2,6 +2,11 @@ Changelog for statusmessages
 
    (name of developer listed in brackets)
 
+statusmessages 1.1 - Unreleased
+
+    - Fixed serious memory leak and did some code improvements.
+      [hannosch] [alecm]
+
 statusmessages 1.0 - Released January 26, 2006
 
     - Initial implementation
